# fmbqml

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: api.md
examples/: __init__.py  multiple_break.py  multiple_break_FRED_MD .ipynb  single_break.py
examples/fred/: factors_em.py  prepare_missing.py  remove_outliers.py
fmbqml/: __init__.py
fmbqml/break_tools/: __init__.py  breakpoint_classification.py  classification_summary.py  classify_break_types.py
fmbqml/factor_tools/: __init__.py  nb_factors.py  panel_factor.py  panel_factors_lr.py  var_selection.py
fmbqml/multiple_break/: __init__.py  eig_sort.py  find_min_qml.py  joint_estimation.py  joint_testing.py  multiple_break_qml.py
fmbqml/single_break/: __init__.py  qml_profile.py  single_break_qml.py
fmbqml/statistical_tools/: __init__.py  brownian.py  critical_values.py  hac.py
fmbqml/utils/: __init__.py  breakpoint_utils.py  criteria.py  data_input.py  formatting.py  partition.py  plotting.py  safe_logdet.py  validation.py
tests/: test_multiple_break.py  test_single_break.py
