[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmbqml"
version = "0.1.2"
description = "Structural-break detection in high-dimensional factor models using QML methods."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Liting Chen"},
    {name = "Jiangtao Duan", email = "duanjiangtao@xidian.edu.cn"},
    {name = "Xu Han"},
]
keywords = [
    "factor models",
    "structural breaks",
    "QML",
    "high-dimensional data",
]
dependencies = [
    "numpy>=1.21.6",
    "scipy>=1.7.3",
    "pandas>=1.3.5",
    "matplotlib>=3.5.0",
    "joblib>=1.1.0",
    "importlib_resources; python_version < '3.9'",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JiangtaoDuan/fmbqml"
Repository = "https://github.com/JiangtaoDuan/fmbqml"
Issues = "https://github.com/JiangtaoDuan/fmbqml/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fmbqml*"]
exclude = ["fmbqml.tests*", "tests*", "examples*", "replication*"]
